--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -28,9 +28,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Log in to Container Registry
         uses: docker/login-action@v3
         with:
@@ -42,7 +39,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/builder
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
@@ -52,13 +49,13 @@ jobs:
       - name: Build and push with Kaniko
         uses: aevea/action-kaniko@master
         with:
-          image: ${{ env.IMAGE_NAME }}
-          registry: ${{ env.REGISTRY }}
+          image: builder
+          registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
           username: ${{ github.actor }}
           tag: ${{ steps.meta.outputs.tags }}
           cache: true
-          cache_registry: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/cache
+          cache_registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}/builder
 
   build-with-docker:
     runs-on: ubuntu-latest
@@ -84,7 +81,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/builder
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
@@ -111,12 +108,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/builder
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha
+
       - name: Build image with Buildah
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ github.sha }} latest
+          image: builder
+          tags: ${{ steps.meta.outputs.tags }}
           containerfiles: |
             ./Dockerfile
 
@@ -132,4 +140,4 @@ jobs:
         with:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
-          registry: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}
