--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -49,13 +49,13 @@ jobs:
       - name: Build and push with Kaniko
         uses: aevea/action-kaniko@master
         with:
-          image: builder
-          registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}
+          image: ${{ github.repository_owner }}/builder
+          registry: ${{ env.REGISTRY }}
           password: ${{ secrets.GITHUB_TOKEN }}
           username: ${{ github.actor }}
-          tag: ${{ steps.meta.outputs.tags }}
+          tag: ${{ steps.meta.outputs.version }},latest
           cache: true
-          cache_registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}/builder
+          cache_registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}/builder/cache
 
   build-with-docker:
     runs-on: ubuntu-latest
@@ -119,15 +119,6 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha
 
-      - name: Build image with Buildah
-        id: build-image
-        uses: redhat-actions/buildah-build@v2
-        with:
-          image: builder
-          tags: ${{ steps.meta.outputs.tags }}
-          containerfiles: |
-            ./Dockerfile
-
       - name: Log in to Container Registry
         uses: redhat-actions/podman-login@v1
         with:
@@ -135,9 +126,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push image with Buildah
-        uses: redhat-actions/push-to-registry@v2
+      - name: Build and push with Buildah
+        uses: redhat-actions/buildah-build@v2
         with:
-          image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
-          registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}
+          tags: ${{ steps.meta.outputs.tags }}
+          containerfiles: |
+            ./Dockerfile
+          push: true
