--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -28,13 +28,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -49,14 +42,13 @@ jobs:
       - name: Build and push with Kaniko
         uses: aevea/action-kaniko@master
         with:
-          image: builder
-          registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          image: builder
           tag: ${{ steps.meta.outputs.version }}
           cache: true
-          cache_registry: ${{ env.REGISTRY }}/${{ github.repository_owner }}/builder/cache
-          tag_with_latest: true
+          cache_registry: cache
 
   build-with-docker:
     runs-on: ubuntu-latest
